# optionHedege-bugfix

./: CMakeLists.txt  README.md  build.sh  config.in
configFile/: CMakeLists.txt
configFile/logConfig/: CMakeLists.txt  loggerConfig.properties
configFile/tradingConfig/: CMakeLists.txt  tradingConfig.json
memoryManage/: CMakeLists.txt
memoryManage/PageEngine/: CMakeLists.txt  main.cpp
memoryManage/journal/: CMakeLists.txt  Frame.hpp  IJournalVisitor.h  IPageProvider.h  IStrategyUtil.h  JournalHandler.cpp  JournalHandler.h  JournalReader.cpp  JournalReader.h  JournalWriter.cpp  JournalWriter.h  Page.cpp  Page.h  PageHeader.h  PageProvider.cpp  PageProvider.h  PageUtil.cpp  PageUtil.h  StrategySocketHandler.h  StrategyUtil.cpp  StrategyUtil.h  journal.h
memoryManage/log/: CMakeLists.txt  MM_Log.cpp  MM_Log.h
memoryManage/paged/: PageEngine.cpp  PageEngine.h  PageSocketHandler.cpp
memoryManage/tools/: CMakeLists.txt  main.cpp
memoryManage/utils/: Timer.cpp  Timer.h  memoryManage_declare.h  redistool.hpp  util.hpp
system/: CMakeLists.txt
tradingEngines/: CMakeLists.txt
tradingEngines/DirectKafkaStrategy/: CMakeLists.txt  main.cpp
tradingEngines/DirectKafkaStrategy/handler/: CMakeLists.txt  config.cpp  config.h  directstrategy.cpp  directstrategy.h  tdhandler.cpp  tdhandler.h  tdhelper.cpp  tdhelper.h  transform.cpp  transform.h  transhelper.cpp  transhelper.h
tradingEngines/DirectKafkaStrategy/util/: CMakeLists.txt  MDateTime.cpp  MDllLoader.h  MIniFile.cpp  MIniFile.h  Platform_window.h
tradingEngines/DirectKafkaStrategy/util2/: CMakeLists.txt  MProduce.h  RpcDef.h  RpcStream.cpp  RpcStream.h
tradingEngines/DirectKafkaStrategy/xtcomm/: XTTradeStruct.h
tradingEngines/MD/: CMakeLists.txt  IMDEngine.cpp  IMDEngine.h  MDEngineCTP.cpp  MDEngineCTP.h  MDEngineSpi.cpp  MDEngineSpi.h
tradingEngines/MDEngine/: CMakeLists.txt  main.cpp
tradingEngines/ParkedKafkaStrategy/: CMakeLists.txt  main.cpp  pubstruct.h
tradingEngines/ParkedKafkaStrategy/handler/: CMakeLists.txt  config.cpp  config.h  directstrategy.cpp  directstrategy.h  parkunit.cpp  parkunit.h  tdhandler.cpp  tdhandler.h  tdhelper.h  timesection.cpp  timesection.h  transform.cpp  transform.h  transhelper.cpp  transhelper.h
tradingEngines/ParkedKafkaStrategy/util/: CMakeLists.txt  MCounter.cpp  MCounter.h  MDateTime.h  MDllLoader.cpp  MDllLoader.h  MIniFile.h  Platform.h  Platform_linux.h  Platform_window.h
tradingEngines/ParkedKafkaStrategy/util2/: CMakeLists.txt  MConsume.cpp  MConsume.h  MProduce.cpp  RpcStream.cpp  RpcStream.h
tradingEngines/ParkedKafkaStrategy/xtcomm/: XTBase.h  XTTParkedStruct.h
tradingEngines/TD/: CMakeLists.txt  ITDEngine.cpp  ITDEngine.h  TDEngineCTP.cpp  TDEngineCTP.h  TDEngineSpi.cpp  TDEngineSpi.h
tradingEngines/TDEngine/: CMakeLists.txt  main.cpp
tradingEngines/TestStrategy/: CMakeLists.txt  main.cpp
tradingEngines/TwapKafkaStrategy/: CMakeLists.txt  main.cpp  pubstruct.h
tradingEngines/TwapKafkaStrategy/handler/: CMakeLists.txt  directstrategy.cpp  directstrategy.h  tdhandler.cpp  tdhandler.h  tdhelper.cpp  timesection.cpp  timesection.h  transform.cpp  transform.h  twapunit.cpp  twapunit.h
tradingEngines/TwapKafkaStrategy/util/: CMakeLists.txt  MCounter.h  MDateTime.h  Platform.h  Platform_linux.h
tradingEngines/TwapKafkaStrategy/util2/: CMakeLists.txt  MConsume.cpp
tradingEngines/TwapKafkaStrategy/xtcomm/: XTBase.h  XTTwapStruct.h
tradingEngines/base/: DataStruct.h  EngineUtil.hpp  IEngine.cpp  IEngine.h  TDPosManage.cpp  TDPosManage.h  TDUserStruct.cpp  TDUserStruct.h  TE_DECLEAR.h  TradingConstant.h  ctp.h  transfer.h
tradingEngines/strategy/: CMakeLists.txt  IDataProcessor.h  IStrategy.cpp  IStrategy.h  TSDataWrapper.cpp  TSDataWrapper.h  TradingStrategyUtil.cpp  TradingStrategyUtil.h
