CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT(tradingEngines)

INCLUDE_DIRECTORIES(../memoryManage/journal)
INCLUDE_DIRECTORIES(../memoryManage/log)
INCLUDE_DIRECTORIES(../memoryManage/paged)
INCLUDE_DIRECTORIES(../memoryManage/utils)
INCLUDE_DIRECTORIES(../system/api/ctp/${CTP_VERSION}/include)

INCLUDE_DIRECTORIES(base)


LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../system/api/ctp/${CTP_VERSION}/lib)

ADD_SUBDIRECTORY(MD)
ADD_SUBDIRECTORY(MDEngine)
ADD_SUBDIRECTORY(strategy)
ADD_SUBDIRECTORY(TD)
ADD_SUBDIRECTORY(TDEngine)
ADD_SUBDIRECTORY(TestStrategy)
ADD_SUBDIRECTORY(DirectKafkaStrategy)
ADD_SUBDIRECTORY(ParkedKafkaStrategy)
ADD_SUBDIRECTORY(TwapKafkaStrategy)
