CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT(testingStrategy)


LINK_DIRECTORIES(${BUILD_DIR}/lib/memoryManage)
LINK_DIRECTORIES(${BUILD_DIR}/lib/boost)
LINK_DIRECTORIES(${BUILD_DIR}/lib/tradingEngines)
LINK_DIRECTORIES(${BUILD_DIR}/lib/md)

SET(STRATEGY_SOURCE_FILE main.cpp)
ADD_EXECUTABLE(${PROJECT_NAME} ${STRATEGY_SOURCE_FILE})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} journal paged ctpmd optionHedgelog log4cplus tradingstrategy ${Boost_LIBRARIES})